# gongchengshijian

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: database.py  main.py
backend/agent/: chat.py  rag.py
backend/config/: config.toml
backend/database/: initial_db.py
backend/routers/: __init__.py  admin.py  literature.py  materials.py  molecule.py  molecule_open.py  news.py  upload.py  xrd.py
doc/: 数据库设计.md  精准化学数据平台后端接口文档.md
frontend/: app.js  index.html  style.css  vue.config.js
frontend/src/: main.js
frontend/src/api/: index.js
frontend/src/components/: AppHeader.vue  AppPageHeader.vue  AppSidebar.vue
frontend/src/router/: index.js
frontend/src/utils/: request.js
