[project]
name = "gongchengshijian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "numpy>=2.0.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tomli>=2.4.1",
    "torch>=2.8.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
